<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_group_main"
        android:key="settings_main">
        <CheckBoxPreference
            android:key="sendData"
            android:summary="@string/settings_desc_send_data"
            android:title="@string/settings_title_send_data"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="sendGeoData"
            android:summary="@string/settings_desc_send_geo_data"
            android:title="@string/settings_title_send_geo_data"
            android:defaultValue="true"/>
        <ListPreference
            android:key="interval"
            android:title="@string/settings_title_interval"
            android:summary="@string/settings_desc_interval"
            android:entries="@array/settings_interval"
            android:entryValues="@array/settings_interval"
            android:defaultValue="10"/>
        <EditTextPreference
            android:key="deviceName"
            android:inputType="text"
            android:title="@string/settings_title_device_name"
            android:summary="@string/settings_desc_device_name"/>
        <EditTextPreference
            android:key="apiUrl"
            android:inputType="text"
            android:title="@string/settings_title_api_url"
            android:defaultValue="http://narodmon.ru/post.php"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_group_other"
        android:key="settings_other">
        <Preference
            android:key="reg_imei"
            android:title="@string/settings_title_imei" />
        <Preference
            android:key="version"
            android:summary="@string/settings_desc_version"
            android:title="@string/settings_title_version" />
        <Preference
            android:key="about"
            android:summary="@string/settings_desc_about"
            android:title="@string/settings_title_about" />
    </PreferenceCategory>
</PreferenceScreen>