<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_preferences"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_info_details"/>

    <item android:id="@+id/action_map"
        android:title="@string/title_activity_map"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_mapmode"/>
</menu>