<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/barometer_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/barometer_title"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/atmosphere_pressure"/>
            <LinearLayout
                android:layout_below="@+id/barometer_title"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/pressure"
                    android:layout_width="70dp"
                    android:layout_height="70dp"/>
                <TextView
                    android:id="@+id/pressure_sensor_result"
                    android:textSize="40sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/pressure_measurement"
                    android:textSize="15sp"
                    android:text="@string/measurement_pressure"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/temperature_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/barometer_panel">
            <TextView
                android:id="@+id/temperature_title"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/temperature"/>
            <LinearLayout
                android:layout_below="@+id/temperature_title"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/temperature"
                    android:layout_width="70dp"
                    android:layout_height="70dp"/>
                <TextView
                    android:id="@+id/temperature_sensor_result"
                    android:textSize="40sp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lighting_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/temperature_panel">
            <TextView
                android:id="@+id/lighting_title"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/lighting"/>
            <LinearLayout
                android:layout_below="@+id/lighting_title"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/light"
                    android:layout_width="70dp"
                    android:layout_height="70dp"/>
                <TextView
                    android:id="@+id/light_sensor_result"
                    android:paddingTop="10dp"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
        
        <Button
            android:id="@+id/submitData"
            android:onClick="submitSensorData"
            android:layout_below="@+id/lighting_panel"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:text="@string/submit_button"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content" />
        
    </RelativeLayout>
</ScrollView>